--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
+    "kafka-node": "^5.0.0",
     "moment": "^2.25.3",
     "mongoose": "^5.9.13",
     "multer": "^1.4.2",
