--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "formidable": "^1.2.2",
     "jsonwebtoken": "^8.5.1",
     "kafka-node": "^5.0.0",
+    "kafkajs": "^1.15.0",
     "moment": "^2.25.3",
     "mongoose": "^5.9.13",
     "multer": "^1.4.2",
@@ -36,6 +37,7 @@
     "node-uuid": "^1.4.8",
     "nodemailer": "^6.4.6",
     "nodemon": "^2.0.3",
+    "request": "^2.88.2",
     "swagger-ui-express": "^4.1.4",
     "twilio": "^3.55.0"
   }
